# space-impact-sdl2

./: CMakeLists.txt  README.md  audio.c  audio.h  config.h  enemies.c  enemies.h  font.c  font.h  graphics.c  graphics.h  main.c  saves.c  saves.h  scenery.c  scenery.h  shotlist.c  shotlist.h  structures.h
data/enemies/: enemy-list.txt
data/objects/: object-list.txt
